new logo and color

--- a/src/_sass/_about.scss
+++ b/src/_sass/_about.scss
@@ -152,7 +152,7 @@
 		}
 
 		h4.year {
-			color: #407AFC;
+			color: #034ad8;
 
 			@media (max-width: 680px) {
 				font-size: 1.2em;
@@ -162,11 +162,11 @@
 		}
 
 		.timeline-graphic {
-			border-left: 8px solid #407AFC;
+			border-left: 8px solid #034ad8;
 
 			@media (max-width: 680px) {
 				margin-left: -4px;
-				border-left: 4px solid #407AFC;
+				border-left: 4px solid #034ad8;
 			}
 		}
 
@@ -178,7 +178,7 @@
 			width: 60px;
 			height: 60px;
 			background-color: #ffffff;
-			border: 8px solid #407AFC;
+			border: 8px solid #034ad8;
 			border-radius: 50%;
 
 			@media (max-width: 680px) {
@@ -186,7 +186,7 @@
 				margin-top: -11px;
 				width: 40px;
 				height: 40px;
-				border: 4px solid #407AFC;
+				border: 4px solid #034ad8;
 			}
 		}
 
@@ -195,14 +195,14 @@
 			height: 0px;
 			left: 118px;
 			margin-top: 3px;
-			border: 10px solid #407AFC;
+			border: 10px solid #034ad8;
 
 			@media (max-width: 680px) {
 				width: 0px;
 				height: 0px;
 				left: 93px;
 				margin-top: 7px;
-				border: 6px solid #407AFC;
+				border: 6px solid #034ad8;
 			}
 		}
 
